# domino

./: .cspell.json  .gitattributes  .gitignore  .tribunal.yml  .yarnrc.yml  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  README.md  bun.lockb  index.d.ts  index.js  package.json  rust-toolchain.toml
.claude/agents/: ai-specialist.md  analysis-agent.md  performance-specialist.md  rust-specialist.md  security-specialist.md  test-specialist.md  traf-domino-debugger.md
.claude/agents/shared/: agent-guidelines.md  confidence-scoring.md  review-output-format.md
.claude/commands/: pr-create.md  pre-commit.md  resolve-pr-comments.md  review-branch.md  review-pr.md
.claude/shared/: review-workflow.md
.cursor/hooks/state/: continual-learning.json
.github/workflows/: CI.yml  cleanup-preview-release.yml  pages.yml  preview-release.yml  release.yml
.husky/: pre-commit
__test__/: index.spec.ts
docs/: index.html
scripts/: generate-packages.js  publish-preview.js  sync-cargo-version.js
src/: cli.rs  core.rs  error.rs  git.rs  lib.rs  lockfile.rs  main.rs  named_inputs.rs  profiler.rs  report.rs  tsconfig.rs  types.rs  utils.rs
src/semantic/: analyzer.rs  assets.rs  mod.rs  reference_finder.rs  resolve_options.rs
src/workspace/: mod.rs  nx.rs  rush.rs  turbo.rs  workspaces.rs
tests/: cli_test.rs  integration_test.rs  publish-preview.test.js
tests/fixtures/test-repo/: index.js  manifest.json  package.json
tests/fixtures/test-repo/npm/test-platform/: index.js  package.json
